@@ -58,6 +58,11 @@ h1.title {
   padding:4px 6px 4px 0px;
 }
 
+#navigation ul#main-menu li.last {
+  margin:4px @navigation-spacing 4px 0px;
+  padding:4px 0px 4px 6px;
+}
+
 #navigation ul#main-menu li {
   padding:4px 6px;
   margin:4px @navigation-spacing;
@@ -66,7 +71,7 @@ h1.title {
   background-color: none;
   :hover {
    background-color:none;
-   color:@bright;
+   color:@red;
   }
 }
 
@@ -121,15 +126,6 @@ h1.title {
   .rounded_corners;
 }
 
-
-
-/*
-FOOTER
-*/
-
-#footer {
-  background: @comp1;
-}
 
 input[type="submit"], button {
   background-color: @primary;
